# DAI-MAS-tutorial-2025

./: .env.example  README.md  RUNTIME_ISSUES_AND_FIXES.md  pyproject.toml
src/: __init__.py
src/core/: __init__.py
src/core/agent_utils/: __init__.py  base.py  reporting.py  roles.py  streaming.py
src/core/data/: mock_medication_records.json
src/core/resources/: __init__.py  events.py
src/core/tools/: __init__.py  administration.py  audit_reporting.py  compliance_rules.py  inventory.py  lab_results.py  medication_orders.py  medication_records.py  patient_data.py  planning.py  prescriptions.py  staff.py  tool_wrappers.py
src/core/tools/red_herring/: __init__.py  billing.py  documents.py  inventory_ordering.py  lab_ordering.py  notifications.py  scheduling.py  staff_scheduling.py  ward_management.py
src/examples/: README.md  __init__.py
src/examples/example_0/: README.md  __init__.py  agents.py  consts.py  main.py
src/examples/example_1/: README.md  __init__.py  agents.py  consts.py  main.py
src/examples/example_2/: README.md  __init__.py  agents.py  consts.py  hooks.py  main.py
src/examples/example_2/resources/: __init__.py  pharmacist_context.py  team_roster.py
src/examples/example_2/tools/: __init__.py  pharmacist_availability.py  specialist_availability.py  team_formation.py
src/examples/example_3/: README.md  __init__.py  agents.py  consts.py  main.py
src/examples/example_3/resources/: audit_context.py
src/examples/example_3/tools/: __init__.py  planning.py  (+1 more)
src/examples/example_4/: README.md  __init__.py  agents.py  consts.py  main.py
(+4 files in other folders)
